loginControllerTest and signupControllerTest copleted